--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	</head>
 	<body>
 		<div id="banner">
-			<h1>My page title</h1>
+			<h1>a New title</h1>
 			<p>The important phrase everyone reads</p>
 			<a href="#" class="btn btn-warning">Try me</a>
 		</div>
