--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 				<div class="col-xs-12 col-sm-6 col-md-3">
 					<div class="card text-center">
 						<img src="images/heart.png" alt="picture description" width="100">
-						<h2>Beautiful</h2>
-						<p>a beautiful app <strong>very beautiful</strong> app</p>
+						<h2>Crazy</h2>
+						<p>a crazy app <strong>very crazy</strong> app</p>
 					</div>
 				</div>
 				<div class="col-xs-12 col-sm-6 col-md-3">
