--- a/index.html
+++ b/index.html
@@ -72,21 +72,10 @@
 					try { sx0l84z1iszo7g = new WufooForm();sx0l84z1iszo7g.initialize(options);sx0l84z1iszo7g.display(); } catch (e) {}};
 					var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s, scr);
 					})(document, 'script');</script>
-
+	<!-- 				LA VOUS COPIEZ VOTRE CODE WUFOO -->
 				</div>
 			</div>
 		</div>
-
-
-
-
-
-
-		
-
-	
-
-
 
 
 		<div id="footer">
