--- a/index.html
+++ b/index.html
@@ -19,6 +19,16 @@
 			<a href="#" class="btn btn-warning">Try me</a>
 		</div>
 
+		<div class="cta text-center">
+		      <h2>Maybe you need some inspiration</h2>
+		      <p>Type a word and try our solution</p>
+
+		      <form action="/search" method="get" class="form-inline">
+		        <input name="query" placeholder="Search dribbles..." class="form-control" type="text">
+		        <input value="Search" class="btn btn-warning" type="submit">
+		      </form>
+		</div>
+
 		<div class="container">
 			<div class="row">
 				<div class="col-xs-12 col-sm-6 col-md-3">
